Fixed Button Spacing
Raised "Remove" button to center of row in product page

--- a/css/oappMain.css
+++ b/css/oappMain.css
@@ -170,7 +170,9 @@ body{margin-top:50px;}
 	display: none;
 	}
 }
-
+.btn-danger{
+	margin-top: -5px;
+}
 .panel-group a {
 	margin-left: 20px;
 }
